# ZED_OC_Lib-callablev1

./: CMakeLists.txt  Config.cmake.in  FindHIDAPI.cmake  README.md
your_project/: CMakeLists.txt
your_project/src/: hellofromzed.cpp
